FTB-Community/force-app/main/default/objects/FTB_CMT_TileConfiguration__mdt/FTB_CMT_TileConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>FTB Custom Metadata for Tile Configuration</description>
    <label>Tile Configuration</label>
    <pluralLabel>Tile Configurations</pluralLabel>
</CustomObject>