FTB-Community/force-app/main/default/objects/FTB_CMT_TileConfiguration__mdt/fields/FTB_Button__c.field-meta.xml
<CustomField>
    <fullName>FTB_Button__c</fullName>
    <label>Button</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>