FTB-Community/force-app/main/default/objects/FTB_CMT_TileConfiguration__mdt/fields/FTB_Message__c.field-meta.xml
<CustomField>
    <fullName>FTB_Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>