FTB-Community/force-app/main/default/objects/FTB_CMT_TileConfiguration__mdt/fields/FTB_Spinner__c.field-meta.xml
<CustomField>
    <fullName>FTB_Spinner__c</fullName>
    <label>Spinner</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>